fix bug in binary search and use internal ArrayList instead of linkedLists in TreeLeaf